# conduit

./: .dockerignore  .gitignore  AGENTS.md  ARCHITECTURE.md  CONSTRAINTS.md  README.md  TESTING.md  pyproject.toml
.github/workflows/: build-image.yml  ci.yml
conduit/: __init__.py  identity.py  ingest.py  models.py  pipeline.py  policy.py  render.py  tags.py
deploy/: Dockerfile  compose.yaml
examples/: direct-list.example.yaml  subscriptions.example.yaml  targets.example.yaml
service/: README.md  __init__.py  app.py  db.py  fetch.py
tests/: test_config_invariants.py  test_ingest.py  test_policy.py  test_render.py  test_service.py  test_tags.py
tests/fixtures/: mihomo.bad.yaml  mihomo.min.yaml  sub.clash.yaml
tests/integration/: README.md  compose.yaml  gen_config.py  mihomo.proxy-only.yaml  run.sh
