[project]
name = "conduit"
version = "0.0.0"
description = "mihomo 配置控制面：订阅 → 可靠 mihomo 配置生成器"
requires-python = ">=3.11"
dependencies = ["pyyaml>=6"]

[project.optional-dependencies]
service = ["fastapi>=0.110", "uvicorn[standard]>=0.27"]
dev = ["pytest>=8", "httpx>=0.27", "fastapi>=0.110"]

[tool.ruff]
target-version = "py311"
line-length = 100
